--- a/tipcalculator/SettingsViewController.xib
+++ b/tipcalculator/SettingsViewController.xib
@@ -6,7 +6,6 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SettingsViewController">
             <connections>
-                <outlet property="defaultTipAmount" destination="WwU-dm-PHG" id="uym-mu-5oV"/>
                 <outlet property="tip" destination="Dld-7z-o9P" id="yfJ-S1-8U8"/>
                 <outlet property="tipSlider" destination="SBA-8p-gis" id="lQk-Tm-3Gq"/>
                 <outlet property="view" destination="iN0-l3-epB" id="CSJ-Qa-Yb1"/>
@@ -23,38 +22,26 @@
                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="WwU-dm-PHG">
-                    <rect key="frame" x="46" y="147" width="237" height="29"/>
-                    <segments>
-                        <segment title="10%"/>
-                        <segment title="15%"/>
-                        <segment title="20%"/>
-                    </segments>
-                    <color key="tintColor" red="0.0" green="0.016062608870000002" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                    <connections>
-                        <action selector="onTap:" destination="-1" eventType="valueChanged" id="TZT-cL-RmG"/>
-                    </connections>
-                </segmentedControl>
                 <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="5" minValue="5" maxValue="25" translatesAutoresizingMaskIntoConstraints="NO" id="SBA-8p-gis">
-                    <rect key="frame" x="44" y="214" width="188" height="31"/>
+                    <rect key="frame" x="43" y="129" width="188" height="31"/>
                     <connections>
                         <action selector="sliderValueChange:" destination="-1" eventType="valueChanged" id="oJ7-Dq-IBc"/>
                     </connections>
                 </slider>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="5" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dld-7z-o9P">
-                    <rect key="frame" x="222" y="218" width="44" height="21"/>
+                    <rect key="frame" x="225" y="133" width="44" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="%" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2dO-cG-UC0">
-                    <rect key="frame" x="265" y="218" width="18" height="21"/>
+                    <rect key="frame" x="270" y="133" width="18" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
-            <color key="backgroundColor" red="0.41680036809999998" green="1" blue="0.64729849819999996" alpha="1" colorSpace="calibratedRGB"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <point key="canvasLocation" x="-85" y="245"/>
         </view>
     </objects>
